warning figure can't be descendant of p fixed, events, speakers, wide screens added some align centering

--- a/src/components/InfoBoxContainerCard/InfoboxContainerCard.scss
+++ b/src/components/InfoBoxContainerCard/InfoboxContainerCard.scss
@@ -44,7 +44,7 @@
         align-items: stretch;
         align-content: space-around;
         //border-bottom: #ffffff 2px solid;
-        p{
+        p,div{
             display: flex;
             flex-direction: row;
             justify-content: center;
