--- a/src/components/InfoboxContainer/InfoboxContainer.scss
+++ b/src/components/InfoboxContainer/InfoboxContainer.scss
@@ -34,5 +34,10 @@
 @media only screen and ( min-width: 1024px ) {
     .InfoboxContainer{
         grid-gap: 30px;
+        .InfoboxContainerCard{
+            max-width: 1024px;
+            margin: 0 auto;
+        }
     }
+   
 }
